--- a/cronometro.html
+++ b/cronometro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronómetro</title>
-    <link href="./cronometro.css" rel="stylesheet">
+    <link href="cronometro.css" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -36,6 +36,6 @@
             </div>
         </div>
     </main>
-    <script src="./dist/cronometro.js" defer></script>
+    <script src="dist/cronometro.js" defer></script>
 </body>
 </html>
